Improved the demo and documentation

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,23 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>use-snapshot demo</title>
+		<style>
+			* {
+				box-sizing: border-box;
+				margin: 0;
+				padding: 0;
+			}
+
+			button {
+				background: black;
+				color: white;
+				padding: 10px 20px;
+				border: none;
+				border-radius: 0.5rem;
+				font-weight: bold;
+				cursor: pointer;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="root"></div>
